--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,10 @@
 # ============================
 
 # URL de conexión a MongoDB (OBLIGATORIA)
-# Ejemplos:
-#   - Local: mongodb://localhost:27017
-#   - MongoDB Atlas: mongodb+srv://usuario:password@cluster.mongodb.net/?retryWrites=true&w=majority
-#   - Con autenticación: mongodb://usuario:password@localhost:27017
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=
 
 # API Key de Google Gemini (OBLIGATORIA)
-# Obtén tu API key en: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=
 
 
 # ============================
@@ -37,7 +32,7 @@ PORT=8000
 MONGODB_DB_NAME=hackathon_db
 
 # Modelo de Gemini a usar
-GEMINI_MODEL=gemini-2.5-flash
+GEMINI_MODEL=gemini-2.5-flash-lite
 
 # Orígenes permitidos para CORS (formato JSON)
 # Ejemplo: ["http://localhost:3000", "http://localhost:8080"]
